# zmk

./: .gitignore  .gitlint  .pre-commit-config-custom.yaml  .pre-commit-config.yaml  .prettierrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README-DEVELOPMENT.md  README.md  cppcheck-suppressions.txt  zmk-docker.sh
.github/: pull_request_template.md
.github/workflows/: ble-test.yml  build-and-test-simplified.yml  build-and-test.yml  build-user-config.yml  build.yml  format-once.yml  hardware-metadata-validation.yml  lint.yml  pre-commit.yml  release-please.yml  stale.yml  test.yml
app/: CMakeLists.txt  Kconfig
app/drivers/: CMakeLists.txt  Kconfig
app/src/: keymap.c  (+1 more)
app/tests/drivers_test/: CMakeLists.txt  prj.conf
app/tests/drivers_test/boards/: native_posix.overlay
app/tests/drivers_test/src/: main.c  test_blackberry_trackpad.c  test_display_integration.c  test_drv2605.c  test_minimal.c
app/tests/integration/full-system/: CMakeLists.txt  events.patterns  native_posix_64.keymap  prj.conf
app/tests/integration/full-system/boards/: native_posix_64.overlay
app/tests/integration/full-system/src/: main.c
app/tests/trackpad-input/basic/: CMakeLists.txt  events.patterns  keycode_events.snapshot  native_posix_64.keymap  prj.conf
app/tests/trackpad-input/basic/boards/: native_posix_64.overlay
app/tests/trackpad-input/basic/src/: main.c
firmware-75243b9e9398428ced70b78e71161c1955cdeaec/: zmk.hex  zmk.uf2
schema/: hardware-metadata.schema.json
scripts/: check-devicetree-syntax.sh  check-driver-includes.sh
(+49 files in other folders)
